--- a/src/internal/web/template/signup.html
+++ b/src/internal/web/template/signup.html
@@ -13,9 +13,9 @@
   <main>
     <div class="registration-wrapper flex-col">
       <div class="registration-top-area bg-snow flex">
-        <h2 class="title signup-title">SIGNUP</h2>
+        <h2 class="title text-center signup-title">SIGNUP</h2>
         <div class="registration-link-wrapper">
-          <a href="/auth/login" class="registration-link">既にアカウントをお持ちの方はこちら</a>
+          <a href="/auth/login" class="signup-link">既にアカウントをお持ちの方はこちら</a>
         </div>
       </div>
       <div class="signup-image-area flex-col">
