--- a/src/internal/web/template/login.html
+++ b/src/internal/web/template/login.html
@@ -13,9 +13,9 @@
   <main>
     <div class="registration-wrapper flex-col">
       <div class="registration-top-area bg-snow flex">
-        <h2 class="title login-title">LOGIN</h2>
+        <h2 class="title text-center login-title">LOGIN</h2>
         <div class="registration-link-wrapper">
-          <a href="/auth/signup" class="registration-link">アカウントの登録はこちら</a>
+          <a href="/auth/signup" class="login-link">アカウントの登録はこちら</a>
         </div>
       </div>
       <div class="login-image-area flex-col">
