[Fix] サインアップ・ログインページの修正

--- a/src/internal/web/template/login.html
+++ b/src/internal/web/template/login.html
@@ -21,7 +21,7 @@
       <div class="login-image-area flex-col">
         <!-- エラーメッセージ -->
         {{ if .error_message}}
-        <div class="error-message-in-signup">
+        <div class="error-message-in-login">
           <p class="text-center letter-005 font-20 text-darkred">{{.error_message}}</p>
         </div>
         {{ end }}
