--- a/src/internal/web/static/css/registration.css
+++ b/src/internal/web/static/css/registration.css
@@ -3,20 +3,27 @@
   min-height: 100vh;
 }
 
-/* .error-message-in-signup {
-  position: absolute;
-  bottom: 4%;
-  right: 0%;
-} */
 .error-message-in-signup {
   position: absolute;
-  top: 19%;
+  top: 18%;
   left: 35.0%;
-  /* bottom: 4%;
-  right: 0%; */
   width: 27%;
-  height: 5%;
-  line-height: 5%;
+  height: 6%;
+  line-height: 100%;
+  padding: 0 10px;
+  border-radius: 8px;
+  background-color: var(--SNOW);
+  opacity: 0.7;
+  box-shadow: 5px 5px 20px rgba(0,0,0,.6);
+  z-index: 10;
+}
+.error-message-in-login {
+  position: absolute;
+  top: 20%;
+  left: 35.0%;
+  width: 27%;
+  height: 6%;
+  line-height: 100%;
   padding: 0 10px;
   border-radius: 8px;
   background-color: var(--SNOW);
