--- a/src/internal/web/template/index.html
+++ b/src/internal/web/template/index.html
@@ -67,12 +67,15 @@
       <div class="content-wrapper flex">
         <div class="content-left-area border-none border-right mt-66">
           <p class="ml-80 font-16 text-wood">日付を選んで<br>free-timeを操作</p>
-          <form class="form-wrapper flex-col items-center">
+          <form
+            method="GET"
+            class="form-wrapper flex-col items-center"
+            >
             <label for="today" class="calendar-label">
               <input class="input-calendar" type="date" name="today" id="today-input"/>
             </label>
             <button class="content-left-button">SELECT</button>
-            <button class="content-left-button">CREATE</button>
+            <button class="content-left-button" formaction="/free-time/create">CREATE</button>
             <button class="content-left-button">UPDATE</button>
           </form>
         </div>
