--- a/src/internal/web/static/css/main.css
+++ b/src/internal/web/static/css/main.css
@@ -117,6 +117,11 @@
   box-shadow: -5px -5px 10px 0px rgba(255, 255, 255, 0.5), 5px 5px 10px 0px rgba(0, 0, 0, 0.3);
 }
 
+.subject-to p {
+  font-size: 29px;
+  line-height: 100%;
+}
+
 .title-area-button-wrapper {
   width: 70%;
   height: 100%;
@@ -354,10 +359,6 @@
   width: 100%;
 }
 
-.input-calendar {
-  width: 70%;
-}
-
 .content-left-button {
   width: 60%;
   height: 50px;
@@ -424,8 +425,8 @@
   content: '';
   position: absolute;
   bottom:-8px;
-  left:5%;
-  width: 60%;
+  left:0%;
+  width: 70%;
   height: 1px;
   background:#333;
   transition: all .3s;
@@ -434,7 +435,7 @@
   content: '';
   position: absolute;
   bottom:-3px;
-  right:35%;
+  right:30%;
   width: 15px;
   height:1px;
   background:#333;
@@ -446,43 +447,76 @@
     left:10%;
 }
 .select-time-wrapper:hover::after{
-    right:30%;
+    right:20%;
 }
 
-.select-time-hour-area {
-  width: 130px;
+.select-time-start-hour-area {
+  width: 10%;
+  height: 70%;
+  margin-left: 5%;
 }
-
-.select-time-hour {
-  height: 35px;
-  margin: 0 50px;
+.select-time-end-hour-area {
+  width: 10%;
+  height: 100%;
+  margin-left: 1%;
+}
+.select-time-start-minute-area {
+  width: 6%;
+  height: 100%;
+  margin-left: 0.3%;
+}
+.select-time-end-minute-area {
+  width: 6%;
+  height: 100%;
+  margin-left: 0.3%;
+}
+.select-time-start-hour {
+  width: 100%;
+  height: 100%;
+  padding: 8px 10px;
+  border-radius: 12px;
+  border: 2px solid var(--WOOD);
+  box-shadow: 4px 4px 5px rgba(0,0,0,.3);
+}
+.select-time-end-hour {
+  width: 100%;
+  height: 100%;
+  padding: 8px 10px;
+  border-radius: 12px;
+  border: 2px solid var(--WOOD);
+  box-shadow: 4px 4px 5px rgba(0,0,0,.3);
+}
+.select-time-start-minute {
+  width: 100%;
+  height: 100%;
   padding: 5px 8px;
-  border-radius: 8px;
+  border-radius: 12px;
+  border: 2px solid var(--WOOD);
+  box-shadow: 4px 4px 5px rgba(0,0,0,.3);
 }
-
-.select-time-minute-area {
-  width: 50px;
-}
-
-.select-time-minute {
-  height: 35px;
-  margin: 0 30px;
+.select-time-end-minute {
+  width: 100%;
+  height: 100%;
   padding: 5px 8px;
-  border-radius: 8px;
+  border-radius: 12px;
+  border: 2px solid var(--WOOD);
+  box-shadow: 4px 4px 5px rgba(0,0,0,.3);
 }
 
 .select-time-button-area {
-  width: 150px;
-  margin-left: 80px;
+  width: 13%;
+  height: 100%;
+  margin-left: 3%;
 }
 
 .select-time-button {
   width: 100%;
   height: 50px;
-  margin: 0 10px;
   padding: 5px 16px;
+  line-height: 50%;
   border: none;
   border-radius: 8px;
-  font-size: 20px;
   letter-spacing: 0.1em;
+  box-shadow: 5px 5px 10px rgba(0,0,0,.3);
+
 }
