[fix] 共通部分のカレンダーの位置を調整した

--- a/src/internal/web/template/create-free-time.html
+++ b/src/internal/web/template/create-free-time.html
@@ -107,7 +107,7 @@
               method="POST"
               class="flex items-end"
               >
-              <label for="date" class="calendar-label">
+              <label for="date" class="calendar-label-create-page">
                 <input class="input-calendar" type="date" name="date" id="today-input" style="font-size:1.2em" />
               </label>
               <input type="hidden" value="{{.year}}" name="year" />
