--- a/src/internal/web/template/index.html
+++ b/src/internal/web/template/index.html
@@ -72,7 +72,7 @@
             class="form-wrapper flex-col items-center"
             >
             <label for="today" class="calendar-label">
-              <input class="input-calendar" type="date" name="today" id="today-input"/>
+              <input class="input-calendar" type="date" name="date" id="today-input" style="font-size:1.1em" />
             </label>
             <button class="content-left-button">SELECT</button>
             <button class="content-left-button" formaction="/free-time/create">CREATE</button>
