--- a/src/internal/web/template/password-re-registration.html
+++ b/src/internal/web/template/password-re-registration.html
@@ -81,7 +81,7 @@
           <p class="ml-80 font-16 text-wood">日付を選んで<br>free-timeを操作</p>
           <form class="form-wrapper flex-col items-center">
             <label for="today" class="calendar-label">
-              <input class="input-calendar" type="date" name="today" id="today-input"/>
+              <input class="input-calendar" type="date" name="date" id="today-input" style="font-size:1.1em" />
             </label>
             <button class="content-left-button">SELECT</button>
             <button class="content-left-button">CREATE</button>
