--- a/src/internal/web/static/css/base.css
+++ b/src/internal/web/static/css/base.css
@@ -179,6 +179,9 @@ ul {
   font-size: 20px;
 }
 
+.font-21 {
+  font-size: 21px;
+}
 .font-22 {
   font-size: 22px;
 }
@@ -242,5 +245,5 @@ ul {
 .error-message-in-create-free-time {
   position: absolute;
   top: 29%;
-  left: 27%;
+  left: 26.8%;
 }
