--- a/src/internal/web/template/index.html
+++ b/src/internal/web/template/index.html
@@ -74,7 +74,7 @@
             <label for="today" class="calendar-label">
               <input class="input-calendar" type="date" name="date" id="today-input" style="font-size:1.1em" />
             </label>
-            <button class="content-left-button" >SELECT</button>
+            <button class="content-left-button" formaction="/free-time/:date">SELECT</button>
             <button class="content-left-button" formaction="/free-time/create">CREATE</button>
             <button class="content-left-button">UPDATE</button>
           </form>
