[fix] 全ページの日付選択フォームのリンク先を飛べるようにした

--- a/src/internal/web/template/index.html
+++ b/src/internal/web/template/index.html
@@ -76,7 +76,7 @@
             </label>
             <button class="content-left-button" formaction="/free-time/:date">SELECT</button>
             <button class="content-left-button" formaction="/free-time/create">CREATE</button>
-            <button class="content-left-button">UPDATE</button>
+            <button class="content-left-button"formaction="/free-time/update">UPDATE</button>
           </form>
         </div>
 
