--- a/src/internal/web/template/update-free-time.html
+++ b/src/internal/web/template/update-free-time.html
@@ -74,9 +74,9 @@
             <label for="today" class="calendar-label">
               <input class="input-calendar" type="date" name="date" id="today-input" style="font-size:1.1em" />
             </label>
-            <button class="content-left-button">SELECT</button>
-            <button class="content-left-button">CREATE</button>
-            <button class="content-left-button">UPDATE</button>
+            <button class="content-left-button" formaction="/free-time/:date">SELECT</button>
+            <button class="content-left-button" formaction="/free-time/create">CREATE</button>
+            <button class="content-left-button"formaction="/free-time/update">UPDATE</button>
           </form>
         </div>
 
