[add] 日付文字列をチェックするvalidationを追加した

--- a/src/internal/web/template/create-free-time.html
+++ b/src/internal/web/template/create-free-time.html
@@ -103,9 +103,9 @@
               <label for="date" class="calendar-label-create-page">
                 <input class="input-calendar" type="date" name="date" id="today-input" style="font-size:1.2em" />
               </label>
-              <input type="hidden" value="{{.year}}" name="year" />
-              <input type="hidden" value="{{.month}}" name="month" />
-              <input type="hidden" value="{{.day}}" name="day" />
+              <input type="hidden" value="{{.year_str}}" name="year" />
+              <input type="hidden" value="{{.month_str}}" name="month" />
+              <input type="hidden" value="{{.day_str}}" name="day" />
               <div class="select-time-start-hour-area flex">
                 <select class="select-time-start-hour font-17" name="start-free-time-hour">
                   <option value="">開始時刻</option>
