[add] date_free_timeの全件取得する関数を追加した

--- a/src/internal/web/template/index.html
+++ b/src/internal/web/template/index.html
@@ -23,7 +23,7 @@
             </a>
           </div>
           <div class="header-link-wrapper">
-            <a href="/free-time">
+            <a href="/free-time/:id">
               <div class="header-link">
                 <p class="font-24 letter-005">FREE-TIME LATEST</p>
               </div>
