[add] free-timeをcanvasで描画できた

--- a/src/internal/web/template/create-free-time.html
+++ b/src/internal/web/template/create-free-time.html
@@ -25,7 +25,7 @@
           <div class="header-link-wrapper">
             <a href="/free-time">
               <div class="header-link">
-                <p class="font-24 letter-005">FREE-TIME LATEST</p>
+                <p class="font-24 letter-005">NEAREST FREE-TIME</p>
               </div>
             </a>
           </div>
