--- a/src/internal/web/template/free-time.html
+++ b/src/internal/web/template/free-time.html
@@ -24,7 +24,7 @@
           <div class="header-link-wrapper">
             <a href="/free-time">
               <div class="header-link">
-                <p class="font-24 letter-005">FREE-TIME LATEST</p>
+                <p class="font-24 letter-005">NEAREST FREE-TIME</p>
               </div>
             </a>
           </div>
@@ -106,7 +106,7 @@
         <div class="select-schedule-left-area border-none border-right flex-col">
           <div class="items-center">
             <div class="content-left flex justify-center items-center m-auto">
-              <p class="font-24">Masaru</p>
+              <p class="font-24">{{.user.Name}}</p>
             </div>
             <div class="content-left flex justify-center items-center m-auto">
               <p>Kaoru12345</p>
@@ -133,6 +133,7 @@
         </div>
         <div class="content-right-area flex-col">
 
+          <canvas id="free-time" width="600" height="400" class="free-time-canvas"></canvas>
         </div>
 
       </div>
@@ -140,6 +141,10 @@
 
 
   </body>
+  <script type="text/javascript">
+    var free_times = JSON.parse('{{marshal .date_free_time.FreeTimes}}');
+  </script>
+  <script type="text/javascript" src="../js/free-time.js"></script>
   <script type="text/javascript" src="../js/now.js"></script>
 
 
