--- a/src/internal/web/template/index.html
+++ b/src/internal/web/template/index.html
@@ -23,9 +23,9 @@
             </a>
           </div>
           <div class="header-link-wrapper">
-            <a href="/free-time/:id">
+            <a href="/free-time/{{.nearest_date_free_time_id}}">
               <div class="header-link">
-                <p class="font-24 letter-005">FREE-TIME LATEST</p>
+                <p class="font-24 letter-005">NEAREST FREE-TIME</p>
               </div>
             </a>
           </div>
