[fix] free-timeの名前の位置を修正した

--- a/src/internal/web/template/create-free-time.html
+++ b/src/internal/web/template/create-free-time.html
@@ -23,7 +23,7 @@
             </a>
           </div>
           <div class="header-link-wrapper">
-            <a href="/free-time">
+            <a href="/free-time/{{.nearest_date_free_time_id}}">
               <div class="header-link">
                 <p class="font-24 letter-005">NEAREST FREE-TIME</p>
               </div>
