--- a/src/internal/web/static/css/main.css
+++ b/src/internal/web/static/css/main.css
@@ -341,6 +341,17 @@
   padding-bottom: 66px;
 }
 
+.username-wrapper {
+  width: 100%;
+  height: 100%;
+  margin-top: 5%;
+}
+
+.username {
+  width: 100%;
+  height: 9vh;
+}
+
 .index-content-right-area {
   width: 80%;
 }
