--- a/src/internal/web/template/free-time.html
+++ b/src/internal/web/template/free-time.html
@@ -66,7 +66,7 @@
           <div class="heading-left-area flex justify-center items-center">
             {{ if and .year .month .day .weekday}}
               <p class="font-20 bold">
-                {{.year_str}}/{{.month_str}}/{{.day_str}}（{{.weekday}}）
+                {{.year}}/{{.month}}/{{.day}}（{{.weekday}}）
               </p>
             {{ else }}
               <p class="font-20 bold">
@@ -108,27 +108,11 @@
             <div class="username flex justify-center items-center m-auto">
               <p class="font-22">{{.user.Name}}</p>
             </div>
+            {{ range .shared_users }}
             <div class="username flex justify-center items-center m-auto">
-              <p>Kaoru12345</p>
+              <p class="font-22">{{ .Name }}</p>
             </div>
-            <div class="content-left flex justify-center items-center m-auto">
-              <p>ほげほげほげほげほげ</p>
-            </div>
-            <div class="content-left flex justify-center items-center m-auto">
-              <p>Jiichan</p>
-            </div>
-            <div class="content-left flex justify-center items-center m-auto">
-              <p>Baachan</p>
-            </div>
-            <div class="content-left flex justify-center items-center m-auto">
-              <p>MOGE</p>
-            </div>
-            <div class="content-left flex justify-center items-center m-auto">
-              <p>Mogu</p>
-            </div>
-            <div class="content-left flex justify-center items-center m-auto">
-              <p>Risa</p>
-            </div>
+            {{ end }}
           </div>
         </div>
         <div class="content-right-area flex-col">
@@ -138,7 +122,9 @@
     </main>
   </body>
   <script type="text/javascript">
-    var free_times = JSON.parse('{{marshal .date_free_time.FreeTimes}}');
+    const free_times = JSON.parse('{{marshal .date_free_time.FreeTimes}}');
+    const shared_date_free_times = JSON.parse('{{marshal .shared_date_free_times}}');
+
   </script>
   <script type="text/javascript" src="../js/free-time.js"></script>
   <script type="text/javascript" src="../js/now.js"></script>
