--- a/src/internal/web/static/css/base.css
+++ b/src/internal/web/static/css/base.css
@@ -233,6 +233,12 @@ ul {
 
 /* =================== error message ====================== */
 
+.error-message-in-free-time {
+  position: absolute;
+  top: 23%;
+  left: 25%;
+}
+
 .error-message-in-account {
   position: absolute;
   top: 24%;
