--- a/src/internal/web/template/index.html
+++ b/src/internal/web/template/index.html
@@ -29,6 +29,7 @@
               </div>
             </a>
           </div>
+
           <div class="header-link-wrapper">
             <a href="/free-times">
               <div class="header-link">
@@ -68,13 +69,13 @@
         <div class="content-left-area border-none border-right mt-66">
           <p class="ml-80 font-16 text-wood">日付を選んで<br>free-timeを操作</p>
           <form
-            method="GET"
+            method="POST"
             class="form-wrapper flex-col items-center"
             >
             <label for="today" class="calendar-label">
               <input class="input-calendar" type="date" name="date" id="today-input" style="font-size:1.1em" />
             </label>
-            <button class="content-left-button" formaction="/free-time/:date">SELECT</button>
+            <button class="content-left-button" formaction="/free-time">SELECT</button>
             <button class="content-left-button" formaction="/free-time/create">CREATE</button>
             <button class="content-left-button"formaction="/free-time/update">UPDATE</button>
           </form>
