[fix] 日付を選択しなかった場合のエラーハンドリングを追加

--- a/src/internal/web/static/css/base.css
+++ b/src/internal/web/static/css/base.css
@@ -233,6 +233,12 @@ ul {
 
 /* =================== error message ====================== */
 
+.error-message-in-index {
+  position: absolute;
+  top: 43.5%;
+  left: 4.5%;
+}
+
 .error-message-in-free-time {
   position: absolute;
   top: 23%;
