--- a/src/internal/web/static/css/main.css
+++ b/src/internal/web/static/css/main.css
@@ -337,8 +337,11 @@
 
 .select-schedule-left-area {
   width: 20%;
+  height: 70vh;
   padding-top: 66px;
   padding-bottom: 66px;
+  border: none;
+  border-right: 1px solid #000;
 }
 
 .username-wrapper {
