[fix] エラーハンドリングを修正した

--- a/src/internal/web/static/css/main.css
+++ b/src/internal/web/static/css/main.css
@@ -373,6 +373,10 @@
   width: 100%;
 }
 
+.content-left-button-wrapper {
+  margin-top: 8%;
+}
+
 .content-left-button {
   width: 60%;
   height: 50px;
