[add] カレンダーに予定がある日の色を変更するようにした#

--- a/src/internal/web/static/css/calender.css
+++ b/src/internal/web/static/css/calender.css
@@ -59,6 +59,10 @@ td.today {
     color: #fff;
 }
 
+td.date-free-time {
+    background-color: #D65E72;
+}
+
 /*ボタン*/
 #next-prev-button {
     position: relative;
