--- a/src/internal/web/template/index.html
+++ b/src/internal/web/template/index.html
@@ -104,6 +104,10 @@
 
 
   </body>
+  <script type="text/javascript">
+    const date_free_times = JSON.parse('{{marshal .date_free_times}}');
+
+  </script>
   <script type="text/javascript" src="../js/now.js"></script>
   <script src="../js/calendar.js"></script>
 
