--- a/src/internal/web/template/create-free-time.html
+++ b/src/internal/web/template/create-free-time.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/calender.css" />
+    <link rel="stylesheet" href="../css/calendar.css" />
   </head>
   <body>
     <header class="header-wrapper bg-white">
