--- a/src/internal/web/template/free-time.html
+++ b/src/internal/web/template/free-time.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/free-time.css" />
+    <link rel="stylesheet" href="../css/calendar.css" />
   </head>
   <body>
     <header class="header-wrapper bg-white">
@@ -57,13 +59,14 @@
     </header>
 
     <main class="main">
-      <div class="heading-wrapper flex-col">
-        <div class="heading-over-area-wrapper flex">
-          <div class="heading-left-area-over"></div>
-          <div class="heading-right-area-over"></div>
+      {{ if not .error_message }}
+      <div class="free-time-header-wrapper flex-col">
+        <div class="upper-area-wrapper flex">
+          <div class="upper-left-area"></div>
+          <div class="upper-right-area"></div>
         </div>
-        <div class="heading-area-wrapper flex">
-          <div class="heading-left-area flex justify-center items-center">
+        <div class="header-area-wrapper flex">
+          <div class="header-left-area flex justify-center items-center">
             {{ if and .year .month .day .weekday}}
               <p class="font-20 bold">
                 {{.year}}/{{.month}}/{{.day}}（{{.weekday}}）
@@ -72,7 +75,7 @@
             {{ end }}
 
           </div>
-          <div class="heading-right-area">
+          <div class="header-right-area">
             <ul >
               <li>6</li>
               <li>7</li>
@@ -113,24 +116,64 @@
           </div>
         </div>
         <div class="content-right-area flex-col">
-          <!-- エラーメッセージ -->
-          {{ if .error_message }}
-          <p class="error-message-in-free-time font-20 text-darkred">{{ .error_message }}</p>
-          {{ end }}
-
           <!-- free-timeを描画 -->
           <canvas id="free-time" width="600" height="400" class="free-time-canvas"></canvas>
         </div>
       </div>
+
+      <!-- エラーメッセージを表示する時 -->
+      {{ else }}
+      <div class="title-area-wrapper">
+        <div class="title-area bg-white">
+          <h1 class="text-center">FREE-TIME PAGE</h1>
+        </div>
+      </div>
+
+      <div class="content-wrapper flex">
+        <!-- エラーメッセージ -->
+        <p class="error-message-in-free-time font-18 text-darkred">{{ .error_message }}</p>
+
+        <div class="content-left-area border-none border-right mt-66">
+          <p class="ml-80 font-16 text-wood">日付を選んで<br>free-timeを操作</p>
+          <form
+            method="POST"
+            class="form-wrapper flex-col items-center"
+            >
+            <label for="today" class="calendar-label">
+              <input class="input-calendar" type="date" name="date" id="today-input" style="font-size:1.1em" />
+            </label>
+            <div class="content-left-button-wrapper text-center">
+              <button class="content-left-button" formaction="/free-time">SELECT</button>
+              <button class="content-left-button" formaction="/free-time/create">CREATE</button>
+              <button class="content-left-button"formaction="/free-time/update">UPDATE</button>
+            </div>
+          </form>
+        </div>
+
+        <div class="index-content-right-area">
+          <div class="calender-wrapper">
+            <h1 id="years"></h1>
+            <div id="next-prev-button">
+              <button id="prev" onclick="prev()">‹</button>
+              <button id="next" onclick="next()">›</button>
+            </div>
+            <div id="calendar"></div>
+          </div>
+        </div>
+      </div>
+      {{ end }}
+
     </main>
   </body>
   <script type="text/javascript">
+    const date_free_times = JSON.parse('{{marshal .date_free_times}}');
     const free_times = JSON.parse('{{marshal .date_free_time.FreeTimes}}');
     const shared_date_free_times = JSON.parse('{{marshal .shared_date_free_times}}');
 
   </script>
-  <script type="text/javascript" src="../js/free-time.js"></script>
   <script type="text/javascript" src="../js/now.js"></script>
+  <script type="text/javascript" src="../js/free-time.js"></script>
+  <script src="../js/calendar.js"></script>
 
 
 </html>
