--- a/src/internal/web/template/free-times.html
+++ b/src/internal/web/template/free-times.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/free-time.css" />
   </head>
   <body>
     <header class="header-wrapper bg-white">
@@ -57,16 +58,16 @@
     </header>
 
     <main class="main">
-      <div class="heading-wrapper flex-col">
-        <div class="heading-over-area-wrapper flex">
-          <div class="heading-left-area-over"></div>
-          <div class="heading-right-area-over"></div>
+      <div class="free-time-header-wrapper flex-col">
+        <div class="upper-area-wrapper flex">
+          <div class="upper-left-area"></div>
+          <div class="upper-right-area"></div>
         </div>
-        <div class="heading-area-wrapper flex">
-          <div class="heading-left-area flex justify-center items-center">
+        <div class="header-area-wrapper flex">
+          <div class="header-left-area flex justify-center items-center">
             <p class="font-20 bold">2023/02/27</p>
           </div>
-          <div class="heading-right-area">
+          <div class="header-right-area">
             <ul >
               <li>6</li>
               <li>7</li>
