--- a/src/internal/web/template/share-with-someone.html
+++ b/src/internal/web/template/share-with-someone.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/registration.css" />
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/calender.css" />
+    <link rel="stylesheet" href="../css/calendar.css" />
     <link rel="stylesheet" href="../css/sharing.css" />
   </head>
   <body>
